[package]
name = "AthenaEngine"
authors = ["fkdldkrhya <sihun.choi@email.rhya-network.kro.kr>"]
description = "Web server template engine for rust"
license = "MIT"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/fkdldkRhya/AthenaEngine.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
chrono = "0.4.23"
urlencoding = "2.1.2"